step2 CR 수정